tracing/python/grpc-server-python-2.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: grpc-tracing
  name: grpc-server-svc2
  labels:
    app: grpc-server-svc2
spec:
  ports:
    - port: 9996
      name: grpc-port
  selector:
    app: grpc-server-deploy2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: grpc-tracing
  name: grpc-server-python-2
  labels:
    app: grpc-server-deploy2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grpc-server-deploy2
  template:
    metadata:
      labels:
        app: grpc-server-deploy2
    spec:
      serviceAccountName: grpc-tracing-sa
      containers:
        - name: grpc-server-deploy2
          image: feuyeux/grpc_server_python:1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 9996
              name: grpc-port
